# aws-mlops-handson

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test-mlops-handson.yml
infra/.all/: main.tf  variables.tf
infra/modules/alb/: main.tf  variables.tf
infra/modules/ecr/: main.tf
infra/modules/ecs/: main.tf  variables.tf
infra/modules/ecs/container_definitions/: ml_pipeline.json  predict_api.json
infra/modules/iam/: main.tf
infra/modules/network/: main.tf  output.tf
infra/modules/s3/: main.tf  variables.tf
infra/modules/stepfunctions/: main.tf  variables.tf
infra/training/: main.tf
ml/: main.py
ml/aws/: controller.py
ml/dataset/: data_loader.py
ml/model/: base_model.py  models.py  sgd_classifier_ctr_model.py  sgd_classifier_ctr_optuna_model.py
ml/preprocessor/: ctr_model_preprocessor.py
notebooks/: analyse.ipynb
predictor/: app.py  routers.py
tests/ml/dataset/: test_data_loader.py
tests/ml/model/: test_models.py  test_sgd_classifier_ctr_model.py
tests/ml/preprocessor/: test_ctr_model_preprocessor.py
tests/predictor/: test_routers.py
